fix content shifting on chrome

--- a/src/style.css
+++ b/src/style.css
@@ -71,6 +71,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 body {
